--- a/src/scripts/data/assets/index.yaml
+++ b/src/scripts/data/assets/index.yaml
@@ -71417,129 +71417,11 @@ models:
     - maxis/base
   badb57f1-01e1:
     - maxis/base
-  badb57f1-01e2:
-    - maxis/base
-  badb57f1-01e3:
-    - maxis/base
-  badb57f1-01e4:
-    - maxis/base
-  badb57f1-01e5:
-    - maxis/base
-  badb57f1-01e6:
-    - maxis/base
-  badb57f1-01e7:
-    - maxis/base
-  badb57f1-01e8:
-    - maxis/base
-  badb57f1-01e9:
-    - maxis/base
-  badb57f1-01ea:
-    - maxis/base
-  badb57f1-01eb:
-    - maxis/base
-  badb57f1-01ec:
-    - maxis/base
-  badb57f1-01ed:
-    - maxis/base
-  badb57f1-01ee:
-    - maxis/base
-  badb57f1-01ef:
-    - maxis/base
-  badb57f1-01f0:
-    - maxis/base
-  badb57f1-01f1:
-    - maxis/base
-  badb57f1-01f2:
-    - maxis/base
-  badb57f1-01f3:
-    - maxis/base
-  badb57f1-01f4:
-    - maxis/base
-  badb57f1-01f5:
-    - maxis/base
-  badb57f1-01f6:
-    - maxis/base
-  badb57f1-01f7:
-    - maxis/base
-  badb57f1-01f8:
-    - maxis/base
-  badb57f1-01f9:
-    - maxis/base
-  badb57f1-01fa:
-    - maxis/base
-  badb57f1-01fb:
-    - maxis/base
-  badb57f1-01fc:
-    - maxis/base
-  badb57f1-01fe:
-    - maxis/base
-  badb57f1-01ff:
-    - maxis/base
   badb57f1-0200:
     - maxis/base
   badb57f1-0201:
     - maxis/base
-  badb57f1-0202:
-    - maxis/base
-  badb57f1-0203:
-    - maxis/base
-  badb57f1-0204:
-    - maxis/base
-  badb57f1-0205:
-    - maxis/base
   badb57f1-0206:
-    - maxis/base
-  badb57f1-0207:
-    - maxis/base
-  badb57f1-0208:
-    - maxis/base
-  badb57f1-0209:
-    - maxis/base
-  badb57f1-020a:
-    - maxis/base
-  badb57f1-020b:
-    - maxis/base
-  badb57f1-020c:
-    - maxis/base
-  badb57f1-020d:
-    - maxis/base
-  badb57f1-020e:
-    - maxis/base
-  badb57f1-020f:
-    - maxis/base
-  badb57f1-0210:
-    - maxis/base
-  badb57f1-0211:
-    - maxis/base
-  badb57f1-0212:
-    - maxis/base
-  badb57f1-0213:
-    - maxis/base
-  badb57f1-0214:
-    - maxis/base
-  badb57f1-0215:
-    - maxis/base
-  badb57f1-0216:
-    - maxis/base
-  badb57f1-0217:
-    - maxis/base
-  badb57f1-0218:
-    - maxis/base
-  badb57f1-0219:
-    - maxis/base
-  badb57f1-021a:
-    - maxis/base
-  badb57f1-021b:
-    - maxis/base
-  badb57f1-021c:
-    - maxis/base
-  badb57f1-021d:
-    - maxis/base
-  badb57f1-021e:
-    - maxis/base
-  badb57f1-021f:
-    - maxis/base
-  badb57f1-0220:
     - maxis/base
   badb57f1-0230:
     - maxis/base
@@ -72210,18 +72092,6 @@ models:
     - maxis/base
   badb57f1-05f9:
     - maxis/base
-  badb57f1-05fa:
-    - maxis/base
-  badb57f1-05fb:
-    - maxis/base
-  badb57f1-05fc:
-    - maxis/base
-  badb57f1-05fd:
-    - maxis/base
-  badb57f1-05fe:
-    - maxis/base
-  badb57f1-05ff:
-    - maxis/base
   badb57f1-0600:
     - maxis/base
   badb57f1-0601:
@@ -72231,58 +72101,6 @@ models:
   badb57f1-0604:
     - maxis/base
   badb57f1-0605:
-    - maxis/base
-  badb57f1-0606:
-    - maxis/base
-  badb57f1-0607:
-    - maxis/base
-  badb57f1-0608:
-    - maxis/base
-  badb57f1-0609:
-    - maxis/base
-  badb57f1-060a:
-    - maxis/base
-  badb57f1-060b:
-    - maxis/base
-  badb57f1-060c:
-    - maxis/base
-  badb57f1-060d:
-    - maxis/base
-  badb57f1-060e:
-    - maxis/base
-  badb57f1-060f:
-    - maxis/base
-  badb57f1-0610:
-    - maxis/base
-  badb57f1-0611:
-    - maxis/base
-  badb57f1-0612:
-    - maxis/base
-  badb57f1-0613:
-    - maxis/base
-  badb57f1-0614:
-    - maxis/base
-  badb57f1-0615:
-    - maxis/base
-  badb57f1-0616:
-    - maxis/base
-  badb57f1-0617:
-    - maxis/base
-  badb57f1-0618:
-    - maxis/base
-  badb57f1-0619:
-    - maxis/base
-  badb57f1-061a:
-    - maxis/base
-  badb57f1-061b:
-    - maxis/base
-  badb57f1-061c:
-    - maxis/base
-  badb57f1-061d:
-    - maxis/base
-  badb57f1-061e:
-    - maxis/base
-  badb57f1-061f:
     - maxis/base
   badb57f1-0700:
     - maxis/base
@@ -186831,6 +186649,10 @@ textures:
   f8354210:
     - mgb204/texture-pack
   f85c405a:
+    - 11241036/textures
+  f85c40a0:
+    - 11241036/textures
+  f85c40a5:
     - 11241036/textures
   f85c40b0:
     - 11241036/textures
