--- a/src/scripts/data/assets/simtropolis/101-residential.yaml
+++ b/src/scripts/data/assets/simtropolis/101-residential.yaml
@@ -49525,6 +49525,15 @@ assets:
     uncompressed: 807333
     url: https://community.simtropolis.com/files/file/36674-yeefatmansion/
     version: 1.0.0
+  simtropolis/36679:
+    assetId: simtropolis/36679-schuyler-street-apartments
+    authors:
+      - Rott
+    category: 101-residential
+    lastModified: 2025-01-24T18:34:28.000Z
+    name: Schuyler Street Apartments
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2025_01/SCH2.thumb.jpg.8cd807aa246c4345a02d871cd79db21d.jpg
+    url: https://community.simtropolis.com/files/file/36679-schuyler-street-apartments/
   simtropolis/3683:
     assetId: simtropolis/3683-victorian-terraces
     authors:
@@ -50556,4 +50565,4 @@ assets:
     url: https://community.simtropolis.com/files/file/992-small-bb-the-greeley-house/
 
 meta:
-  timestamp: 2025-01-22T07:05:40.696Z
+  timestamp: 2025-01-27T10:26:26.390Z
