--- a/src/scripts/data/assets/simtropolis/109-waterfront.yaml
+++ b/src/scripts/data/assets/simtropolis/109-waterfront.yaml
@@ -19927,6 +19927,15 @@ assets:
     name: SC4 Legacy - Moonlinght Japan Canals Collection V2
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_10/671145d88c56b_MLJPNDTCanal.thumb.jpg.92319d9263c6b64480ae880d4602c1a7.jpg
     url: https://community.simtropolis.com/files/file/36509-sc4-legacy-moonlinght-japan-canals-collection-v2/
+  simtropolis/36678:
+    assetId: simtropolis/36678-phil-boat-ramps
+    authors:
+      - philforhockey51
+    category: 109-waterfront
+    lastModified: 2025-01-23T21:42:04.000Z
+    name: PHIL Boat Ramps
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2025_01/6792b7ac8a55c_boatramp3.thumb.jpg.c28c430a1106f7505cdce457c7f3a880.jpg
+    url: https://community.simtropolis.com/files/file/36678-phil-boat-ramps/
   simtropolis/3704:
     assetId: simtropolis/3704-fishing-docks
     authors:
@@ -20109,4 +20118,4 @@ assets:
     url: https://community.simtropolis.com/files/file/944-virginia-beach-boardwalk/
 
 meta:
-  timestamp: 2025-01-22T07:05:40.696Z
+  timestamp: 2025-01-27T10:26:26.390Z
