--- a/src/scripts/data/assets/simtropolis/113-graphical-mods.yaml
+++ b/src/scripts/data/assets/simtropolis/113-graphical-mods.yaml
@@ -24953,6 +24953,15 @@ assets:
     name: WestWindStreets SAM 8 - Firenze
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/capt_acc_wwsam8.thumb.jpg.d24530b552df446358584d8ccf8a1ac4.jpg
     url: https://community.simtropolis.com/files/file/36639-westwindstreets-sam-8-firenze/
+  simtropolis/36680:
+    assetId: simtropolis/36680-urban-streets
+    authors:
+      - '11241036'
+    category: 113-graphical-mods
+    lastModified: 2025-01-26T21:29:06.000Z
+    name: Urban Streets
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2025_01/Scr_2.thumb.jpg.e220920ab93980395d69ee99a3d450f5.jpg
+    url: https://community.simtropolis.com/files/file/36680-urban-streets/
   simtropolis/3753:
     assetId: simtropolis/3753-palm-trees
     authors:
@@ -25158,4 +25167,4 @@ assets:
     url: https://community.simtropolis.com/files/file/966-surface-water-volume-1/
 
 meta:
-  timestamp: 2025-01-22T07:05:40.696Z
+  timestamp: 2025-01-27T10:26:26.390Z
