--- a/src/scripts/data/assets/index.yaml
+++ b/src/scripts/data/assets/index.yaml
@@ -3177,6 +3177,8 @@ buildings:
     - mattb325/batprops-w2w-vol01
   1504eb0b:
     - mattb325/batprops-w2w-vol01
+  151f799a:
+    - jestarr/acme-restoration-company
   160f0cfd:
     - mattb325/batprops-cottages-ornee-vol01
   16fdac0f:
@@ -4539,6 +4541,8 @@ buildings:
     - mattb325/batprops-w2w-vol01
   5504fb49:
     - jestarr/altman-miller-machine-shop
+  551f79e1:
+    - jestarr/acme-restoration-company
   5534c524:
     - madhatter106/new-age-and-occult-pack-vol01
   5539109d:
@@ -5185,6 +5189,10 @@ buildings:
     - dolphin66/mega-props-vol03
   749b83ec:
     - dolphin66/mega-props-vol03
+  74a624c3:
+    - jestarr/acme-restoration-company
+  74a6257e:
+    - jestarr/acme-restoration-company
   74b1bef9:
     - zero7/industrial-pack
   74c2768b:
@@ -9753,6 +9761,8 @@ lots:
     - koonam/art-live-building
   3493ee05:
     - wannglondon/tulum-homes
+  351f79ed:
+    - jestarr/acme-restoration-company
   3538721e:
     - mgb204/convenience-stores
   36436d47:
@@ -13632,6 +13642,10 @@ lots:
     - cococity/coco-hillstate-apartment
   '74842461':
     - zero7/industrial-pack
+  74a624c3:
+    - jestarr/acme-restoration-company
+  74a6257e:
+    - jestarr/acme-restoration-company
   '75051183':
     - jestarr/altman-miller-machine-shop
   75f8d36d:
@@ -15980,6 +15994,8 @@ lots:
     - koonam/fealds-theatre
   c5051165:
     - jestarr/altman-miller-machine-shop
+  c51f79be:
+    - jestarr/acme-restoration-company
   c5221b88:
     - 11241036/lot-foundations-and-retaining-walls
   c5221bbf:
@@ -31806,6 +31822,8 @@ models:
     - dolphin66/mega-props-vol03
   1455bb8c:
     - wannglondon/vintage-sign-prop-pack
+  1455c226:
+    - jestarr/acme-restoration-company
   145876ca:
     - jestarr/mega-props-vol06
   145c2981:
@@ -88847,6 +88865,8 @@ models:
     - dolphin66/mega-props-vol03
   f455b9ae:
     - wannglondon/vintage-sign-prop-pack
+  f455bfd8:
+    - jestarr/acme-restoration-company
   f4671f30:
     - wannglondon/grand-mediterranean-hotels
   f4767167:
