--- a/src/scripts/data/assets/simtropolis/101-residential.yaml
+++ b/src/scripts/data/assets/simtropolis/101-residential.yaml
@@ -49534,6 +49534,15 @@ assets:
     name: Schuyler Street Apartments
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2025_01/SCH2.thumb.jpg.8cd807aa246c4345a02d871cd79db21d.jpg
     url: https://community.simtropolis.com/files/file/36679-schuyler-street-apartments/
+  simtropolis/36683:
+    assetId: simtropolis/36683-krg-shk-mediterranean-villas-growable_set
+    authors:
+      - kergelen
+    category: 101-residential
+    lastModified: 2025-01-30T18:16:38.000Z
+    name: KRG SHK Mediterranean Villas Growable_Set
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2025_01/KRG_SHK_Italian_Villas.thumb.jpg.4f2318bb595d92f62bf34339466c365a.jpg
+    url: https://community.simtropolis.com/files/file/36683-krg-shk-mediterranean-villas-growable_set/
   simtropolis/3683:
     assetId: simtropolis/3683-victorian-terraces
     authors:
@@ -50565,4 +50574,4 @@ assets:
     url: https://community.simtropolis.com/files/file/992-small-bb-the-greeley-house/
 
 meta:
-  timestamp: 2025-01-27T10:26:26.390Z
+  timestamp: 2025-01-31T11:33:55.242Z
