--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "engines": {
     "node": ">=20.0.0 <22.0.0"
   },
-  "packageManager": "yarn@4.5.3",
+  "packageManager": "yarn@4.6.0",
   "main": "./out/main/index.js",
   "author": "Salinco96 <loicnico96b@gmail.com>",
   "license": "GPL-3.0",
@@ -46,7 +46,7 @@
     "content-disposition": "0.5.4",
     "electron-log": "5.1.4",
     "escape-html": "1.0.3",
-    "glob": "10.4.1",
+    "glob": "^11.0.1",
     "i18next": "23.11.5",
     "immutability-helper": "3.1.1",
     "ini": "^5.0.0",
